--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,29 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var myLatlng = {lat: -40.9006, lng: 174.8860};
+
+        var map = new google.maps.Map(
+            document.getElementById('map'), {zoom: 7, center: myLatlng});
+          
+        // Configure the click listener.
+        map.addListener('click', function(mapsMouseEvent) {
+          // Close the current InfoWindow.
+          infoWindow.close();
+
+          // Create a new InfoWindow.
+          infoWindow = new google.maps.InfoWindow({position: mapsMouseEvent.latLng});
+          infoWindow.setContent(mapsMouseEvent.latLng.toString());
+            console.log(mapsMouseEvent.latLng.toString());
+          infoWindow.open(map);
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-TQvCUYWNNIKtZH7d1nvYntfAuPXWwo0&callback=initMap">
+    </script>
   </body>
 </html>
