--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,13 @@
         var myLatlng = {lat: -40.9006, lng: 174.8860};
 
         var map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 7, center: myLatlng});
-          
+            document.getElementById('map'), {zoom: 4, center: myLatlng});
+
+        // Create the initial InfoWindow.
+        var infoWindow = new google.maps.InfoWindow(
+            {content: 'Click the map to get Lat/Lng!', position: myLatlng});
+        infoWindow.open(map);
+
         // Configure the click listener.
         map.addListener('click', function(mapsMouseEvent) {
           // Close the current InfoWindow.
@@ -54,9 +59,9 @@
           // Create a new InfoWindow.
           infoWindow = new google.maps.InfoWindow({position: mapsMouseEvent.latLng});
           infoWindow.setContent(mapsMouseEvent.latLng.toString());
-            console.log(mapsMouseEvent.latLng.toString());
           infoWindow.open(map);
         });
+
       }
     </script>
     <script async defer
