--- a/public/index.html
+++ b/public/index.html
@@ -39,4 +39,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-TQvCUYWNNIKtZH7d1nvYntfAuPXWwo0&callback=initMap">
+    </script>
 </html>
