--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Demo DOI</title>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-TQvCUYWNNIKtZH7d1nvYntfAuPXWwo0&callback=initMap">
+    </script>
+    <script src="../src/components/GoogleMap.js"></script>
   </head>
-  <body>
+  <body onload="initMap()">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,25 +43,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <div id="map"></div>
-    <script>
-      function initMap() {
-        var myLatlng = {lat: -40.9006, lng: 174.8860};
-
-        var map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 7, center: myLatlng});
-          
-        // Configure the click listener.
-        map.addListener('click', function(mapsMouseEvent) {
-
-          // Create a new InfoWindow.
-          var infoWindow = new google.maps.InfoWindow({position: mapsMouseEvent.latLng});
-          infoWindow.setContent(mapsMouseEvent.latLng.toString());
-          infoWindow.open(map);
-        });
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-TQvCUYWNNIKtZH7d1nvYntfAuPXWwo0&callback=initMap">
-    </script>
   </body>
 </html>
