Improved visual implementation of combined API

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
       
       function printRes(json) {
       	var _containDiv = document.getElementById('mapResults');
+      	_containDiv.innerHTML = "";
       	var _colDiv = document.createElement("div");
       	_colDiv.className = "col-sm-8";
       	var _table = document.createElement("table");
