--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,89 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <div id="map"></div>
-    <div id="mapResults"></div>
+    <div id="mapResults" onload="showData()">
+	    <div className="col-sm-8">
+	                <table className="table table-info table-hover">
+	                    <tbody>
+	                        <tr>
+	                            <td>City</td>
+	                            <td id="city"></td>
+	                        </tr>
+	                        <tr>
+	                            <td>Temperature</td>
+	                            <td id="temp"></td>
+	                        </tr>
+	                        <tr>
+	                            <td>Pressure</td>
+	                            <td id="pressure"></td>
+	                        </tr>
+	                        <tr>
+	                            <td>Humidity</td>
+	                            <td id="humid"></td>
+	                        </tr>
+	                        <tr>
+	                            <td>Temperature (Min)</td>
+	                            <td id="minTemp"></td>
+	                        </tr>
+	                        <tr>
+	                            <td>Temperature (Max)</td>
+	                            <td id="maxTemp"></td>
+	                        </tr>
+	                        <tr>
+	                            <td>Conditions</td>
+	                            <td id="cond"></td>
+	                        </tr>
+	                    </tbody>
+	                </table>
+	            </div>
+    </div>
+	<script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-analytics.js"></script>
+
+	<script>
+	  // Your web app's Firebase configuration
+	  var firebaseConfig = {
+	    apiKey: "AIzaSyB5Z0lRFzA_NqLs5FNy63KHL8jhkZXzVA0",
+	    authDomain: "compx341a4-2f07b.firebaseapp.com",
+	    databaseURL: "https://compx341a4-2f07b.firebaseio.com",
+	    projectId: "compx341a4-2f07b",
+	    storageBucket: "compx341a4-2f07b.appspot.com",
+	    messagingSenderId: "899123591774",
+	    appId: "1:899123591774:web:2204300a2bd275d86fd2cf",
+	    measurementId: "G-2QPF1JFLYE"
+	  };	
+	  // Initialize Firebase
+	  firebase.initializeApp(firebaseConfig);
+	  firebase.analytics();
+	</script>
+	
+	<script>
+		function showData() {
+			var city = document.getElementById('city');
+			var temp = document.getElementById('temp');
+			var pressure = document.getElementById('pressure');
+			var humid = document.getElementById('humid');
+			var minTemp = document.getElementById('minTemp');
+			var maxTemp = document.getElementById('maxTemp');
+			var cond = document.getElementById('cond');
+			
+			firebase.database().ref('/').once('value', function(snapshot) {
+                    snapshot.forEach(function(childSnapshot)
+                    {
+                        var childData = childSnapshot.val();   
+                        city.innerHTML = childData['city'];
+                        temp.innerHTML = childData['temp'];
+                        pressure.innerHTML = childData['pressure'];
+                        humid.innerHTML = childData['humid'];
+                        minTemp.innerHTML = childData['minTemp'];
+                        maxTemp.innerHTML = childData['maxTemp'];
+                        cond.innerHTML = childData['cond'];
+                    })
+                })
+		}
+	</script>
+	
     <script>
       function initMap() {
         var myLatlng = {lat: -40.9006, lng: 174.8860};
