--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Demo DOI</title>
   </head>
-  <body>
+  <body  onload="showData()">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,7 +39,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <div id="map"></div>
-    <div id="mapResults" onload="showData()">
+    <div id="mapResults">
 	    <div className="col-sm-8">
 	                <table className="table table-info table-hover">
 	                    <tbody>
